# Coastscan

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
apps/coastscan_viewer/: README.md  app.py
config/: sources.yml
config/acquisitions/: mallorca_northwest_pilot.json
config/aoi/: mallorca_northwest_pilot.json
config/regions/: mallorca_northwest_pilot.yml  mallorca_pilot.yml  synthetic_demo.yml
config/schemas/: region.schema.yml
data_catalog/: README.md  bathymetry_sources.csv  sources.csv
data_catalog/acquisitions/: mallorca_northwest_pilot.json
data_catalog/optical/: mallorca_northwest_pilot_scenes.json  (+1 more)
docs/: local_viewer.md  mallorca_phase1_data.md  mallorca_phase251_viewer_geometry_repair.md  mallorca_phase25_publication_closeout.md  mallorca_phase25_viewer_verification.md  mallorca_phase2_bathymetry.md  mallorca_phase2_bathymetry_source_assessment.md  mallorca_phase3_optical_pipeline.md  mallorca_phase3_optical_source_assessment.md
scripts/: build_region.py  create_synthetic_fixtures.py  create_viewer_fixtures.py  inspect_inputs.py
tests/: conftest.py  test_acquisition.py  test_bathymetry.py  test_coastline_extract.py  test_config.py  test_direct_coastline.py  test_multitile_rasters.py  test_optical.py  test_orientation.py  test_pipeline.py  test_published_snapshots.py  test_real_like_pipeline.py  test_segmentation.py  test_terrain_features.py  test_terrain_origins.py  test_transects.py  test_viewer_app.py  test_viewer_data.py  test_viewer_filters.py  test_viewer_layers.py  test_viewer_metrics.py  test_viewer_validation.py
(+98 files in other folders)
