[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coastscan"
version = "0.1.0"
description = "Reproducible coastline segmentation and terrestrial morphology pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "geopandas>=1.0",
  "matplotlib>=3.9",
  "numpy>=2.0",
  "pandas>=2.2",
  "pyarrow>=17",
  "pydantic>=2.8",
  "pyogrio>=0.9",
  "pyyaml>=6.0",
  "rasterio>=1.4",
  "rich>=13.7",
  "shapely>=2.0",
  "streamlit>=1.45",
  "pydeck>=0.9.2",
  "typer>=0.12",
]

[dependency-groups]
dev = ["mypy>=1.11", "pandas-stubs>=2.2", "pytest>=8.3", "ruff>=0.6"]

[project.scripts]
coastscan = "coastscan.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/coastscan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
packages = ["coastscan"]

[[tool.mypy.overrides]]
module = [
  "geopandas.*",
  "rasterio.*",
  "matplotlib.*",
  "shapely.*",
  "pyogrio.*",
  "pydeck.*",
  "streamlit.*",
  "yaml.*",
]
ignore_missing_imports = true
